# email-sorter

./: README.md  pyproject.toml  setup.py
emailsorter/: cli.py  initializer.py
emailsorter/actions/: inbox_discovery.py
emailsorter/common/: model.py
emailsorter/core/: common.py  constants.py  context.py  error.py  handler.py  output.py
emailsorter/display/: console.py  print.py  table.py
